--- a/Hjemmeside/index.html
+++ b/Hjemmeside/index.html
@@ -22,7 +22,7 @@
     </div>
 
 <!--Welcome section-->
-    <a id="welcome">
+    <a id="Goodbye">
       <div id="linktowelcome"></div>
     </a>
     <div class="welcome">
